--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -25,9 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [ "../node_modules/jquery/dist/jquery.min.js",
-            "../node_modules/popper.js/dist/umd/popper.min.js",
-              "../node_modules/bootstrap/dist/js/bootstrap.js",
+            "scripts": [ "node_modules/jquery/dist/jquery.min.js",
+            "node_modules/popper/index.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
               "src/assets/js/interact.min.js"
               ]
           },
