--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,44 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.6",
-    "@angular/common": "^6.1.6",
-    "@angular/compiler": "^6.1.6",
-    "@angular/core": "^6.1.6",
-    "@angular/forms": "^6.1.6",
-    "@angular/http": "^6.1.6",
-    "@angular/platform-browser": "^6.1.6",
-    "@angular/platform-browser-dynamic": "^6.1.6",
-    "@angular/router": "^6.1.6",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "core-js": "^2.6.11",
     "glyphicons": "^0.2.0",
-    "octicons": "^8.1.0",
-    "rxjs": "^6.3.1",
-    "zone.js": "~0.8.26"
+    "octicons": "^8.5.0",
+    "rxjs": "^6.6.3",
+    "rxjs-tslint": "^0.1.8",
+    "tslib": "^1.13.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.5",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.6",
-    "@angular/language-service": "^6.1.6",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/cli": "^8.3.29",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "bootstrap": "^4.1.3",
-    "codelyzer": "~4.2.1",
-    "interactjs": "^1.3.4",
+    "bootstrap": "^4.5.2",
+    "codelyzer": "^5.0.1",
+    "interactjs": "^1.9.22",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.3",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "popper": "^1.0.1",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~3.5.3"
   }
 }
