--- a/ServerApp/requirements.txt
+++ b/ServerApp/requirements.txt
@@ -1,128 +1,14 @@
-Abjad==2.17
-altgraph==0.10.2
-backports.ssl-match-hostname==3.4.0.2
-bdist-mpkg==0.5.0
-BeautifulSoup==3.2.1
-bleach==2.1.1
-blinker==1.4
-bonjour-py==0.3
-certifi==14.5.14
-chisubmit==0.9b1
-click==3.3
-colorama==0.3.3
-configparser==3.5.0
-decorator==4.1.2
-docutils==0.12
-entrypoints==0.2.3
-enum34==1.1.4
-Flask==0.10.1
-Flask-Login==0.3.2
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-Security==1.7.5
-Flask-SQLAlchemy==2.1
-Flask-WTF==0.12
-gitdb==0.6.4
-GitPython==0.3.5
-gnureadline==6.3.3
-googlemaps==2.4.5
-html5lib==1.0b10
-imageio==2.2.0
-ipykernel==4.6.1
-ipython==3.1.0
-ipython-genutils==0.2.0
-ipywidgets==7.0.4
-itsdangerous==0.24
-Jinja2==2.8
-jsonschema==2.4.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-macholib==1.5.1
-MarkupSafe==0.23
-matplotlib==1.3.1
-midi==0.2.3
-mistune==0.8.1
-modulegraph==0.10.4
-mpmath==1.0.0
-nbconvert==5.3.1
-nbformat==4.4.0
-nose==1.3.7
-notebook==5.2.1
-numpy==1.13.3
-pandas==0.21.0
-pandocfilters==1.4.2
-passlib==1.6.5
-Pillow==3.0.0
-ply==3.8
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-py2app==0.7.3
-pyapi-gitlab==7.5.0
-PyGithub==1.25.2
-Pygments==2.2.0
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==2.4.0
-pytz==2014.10
-PyYAML==3.11
-pyzmq==14.5.0
-qtconsole==4.3.1
-requests==2.10.0
-scikit-learn==0.19.1
-scipy==0.13.0b1
-six==1.9.0
-sklearn==0.0
-smmap==0.9.0
-SQLAlchemy==1.0.12
-sympy==1.1.1
-terminado==0.7
-testpath==0.3.1
-tornado==4.1
-traitlets==4.3.2
-tzlocal==1.1.2
-vboxapi==1.0
-virtualenv==16.0.0
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.11.9
-widgetsnbextension==3.0.7
-WTForms==2.1
-xattr==0.6.4
-zope.interface==4.1.1
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.9
+future==0.18.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.16.0
+MarkupSafe==1.1.1
+more-itertools==8.5.0
+music21==6.1.0
+six==1.15.0
+webcolors==1.11.1
+Werkzeug==1.0.1
