--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "core-js": "^2.6.11",
     "glyphicons": "^0.2.0",
     "octicons": "^8.5.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
     "rxjs-tslint": "^0.1.8",
     "tslib": "^1.13.0",
